--- a/test_project/templates/base.html
+++ b/test_project/templates/base.html
@@ -17,11 +17,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Main page</a>
+          <a class="navbar-brand" href="#">Catalog</a>
         </div>
         <div class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
+          <form class="navbar-form navbar-right" role="form" action="/admin">
+            {% csrf_token %}
             <div class="form-group">
               <input type="text" placeholder="Email" class="form-control">
             </div>
