--- a/test_project/templates/base.html
+++ b/test_project/templates/base.html
@@ -3,10 +3,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>main</title>
+    <title>{% block title %}{% endblock %}</title>
   {% bootstrap_css %}
   {% bootstrap_javascript %}
   </head>
+
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
@@ -17,48 +18,50 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Main page</a>
-          <a class="navbar-brand" href="#">Catalog</a>
+          <a class="navbar-brand" href="{% url 'main:main_page' %}">Main</a>
+          <a class="navbar-brand" href="{% url 'catalog:catalog_page' %}">Catalog</a>
+          <a class="navbar-brand" href="{% url 'sales_rate:sales_rate_page' %}">Sales rate</a>
         </div>
         <div class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form" action="/admin">
+          <form class="navbar-form navbar-right" role="form" action="#" method="post">
             {% csrf_token %}
             <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
+              <input type="text" placeholder="User name" class="form-control">
             </div>
             <div class="form-group">
               <input type="password" placeholder="Password" class="form-control">
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
           </form>
-        </div><!--/.navbar-collapse -->
+        </div>
       </div>
     </div>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
+
+    <!-- Main container -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+        {% block container %}
+        {% endblock %}
       </div>
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
+      <!-- Footer -->
+      {% block footer %}
       <div class="row">
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <h2>About</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <h2>Contacts</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <h2>Partners</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
@@ -69,6 +72,7 @@
       <footer>
         <p>&copy; Company 2019</p>
       </footer>
-    </div> <!-- /container -->
+      {% endblock %}
+    </div>
   </body>
 </html>
