--- a/test_project/catalog_app/templates/catalog_app/catalog.html
+++ b/test_project/catalog_app/templates/catalog_app/catalog.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
+{% load pagination_tags%}
 {% block title %}catalog{% endblock %}
 {% block container %}
-<div class="row">
     {% if hotels %}
+    {% autopaginate hotels 4 %}
         {% for hotel in hotels %}
-            <div class="col-sm-3 blog-main">
+        <div class="row">
+            <div class="col-sm-5 col-md-5 blog-main">
                 <div class="sidebar-module sidebar-module-inset">
                     <br/>
                     <a href="/catalog/{{ hotel.pk }}" >
@@ -13,13 +15,14 @@
                 </div>
             </div>
 
-            <div class="col-sm-8 col-sm-offset-1 blog-sidebar">
+            <div class="col-sm-5 col-md-6 col-sm-offset-1 blog-sidebar">
                 <div class="sidebar-module sidebar-module-inset">
                     <a href="/catalog/{{ hotel.pk }}" ><h2>{{ hotel.hc_name }}</h2></a>
                     <p>{{ hotel.hc_description }}</p>
                 </div>
             </div>
+        </div>
         {% endfor %}
     {% endif %}
-</div>
+{% paginate %}
 {% endblock %}
