--- a/test_project/templates/base.html
+++ b/test_project/templates/base.html
@@ -23,16 +23,24 @@
           <a class="navbar-brand" href="{% url 'sales_rate:sales_rate_page' %}">Sales rate</a>
         </div>
         <div class="navbar-collapse collapse">
+          {% if user.is_authenticated %}
           <form class="navbar-form navbar-right" role="form" action="#" method="post">
             {% csrf_token %}
+            <button type="submit" class="btn btn-success">Sign out</button>
+          </form>
+          {% else %}
+          <!-- Authentication Form -->
+          <form class="navbar-form navbar-right" role="form" action="{% url 'auth:login' %}" method="post">
+            {% csrf_token %}
             <div class="form-group">
-              <input type="text" placeholder="User name" class="form-control">
+              <input type="text" placeholder="User name" class="form-control" name="username">
             </div>
             <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
+              <input type="password" placeholder="Password" class="form-control" name="password">
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
           </form>
+          {% endif %}
         </div>
       </div>
     </div>
