--- a/test_project/templates/base.html
+++ b/test_project/templates/base.html
@@ -19,28 +19,29 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'main:main_page' %}">Main</a>
-          <a class="navbar-brand" href="{% url 'catalog:catalog_page' %}">Catalog</a>
-          <a class="navbar-brand" href="{% url 'sales_rate:sales_rate_page' %}">Sales rate</a>
+          <a class="navbar-brand" href="{% url 'main:main_page' %}">Главная</a>
+          <a class="navbar-brand" href="{% url 'catalog:catalog_page' %}">Каталог</a>
+          <a class="navbar-brand" href="{% url 'sales_rate:sales_rate_page' %}">Темпы продаж</a>
         </div>
         <div class="navbar-collapse collapse">
+          <!-- Authentication Form -->
           {% if user.is_authenticated %}
           <form class="navbar-form navbar-right" role="form" action="{% url 'auth:logout' %}" method="post">
             {% csrf_token %}
-            <button type="submit" class="btn btn-success">Log out</button>
+            <button type="submit" class="btn btn-success">Выйти</button>
           </form>
           {% else %}
-          <!-- Authentication Form -->
-          <form class="navbar-form navbar-right" role="form" action="{% url 'auth:login' %}" method="post">
+          <form class="navbar-form navbar-right" data-toggle="validator" role="form" action="{% url 'auth:login' %}" method="post">
             {% csrf_token %}
             <div class="form-group">
-              <input type="text" placeholder="User name" class="form-control" name="username">
+              <input type="text" placeholder="User name" class="form-control" name="username" required>
             </div>
             <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control" name="password">
+              <input type="password" placeholder="Password" class="form-control" name="password" required>
             </div>
-            <button type="submit" class="btn btn-success">Log in</button>
+            <button type="submit" class="btn btn-success">Войти</button>
           </form>
+          <!-------------------------->
           {% endif %}
         </div>
       </div>
@@ -60,17 +61,17 @@
       {% block footer %}
       <div class="row">
         <div class="col-md-4">
-          <h2>About</h2>
+          <h2>О компании</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Contacts</h2>
+          <h2>Контакты</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2>Partners</h2>
+          <h2>Партнеры</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
