--- a/test_project/catalog_app/templates/catalog_app/hotel_card.html
+++ b/test_project/catalog_app/templates/catalog_app/hotel_card.html
@@ -55,7 +55,7 @@
 
 <div class="table">
   <!-- Default panel contents -->
-  <div class="panel-heading">Номера</div>
+  <div class="panel-heading"><h4>Номера</h4></div>
   <!-- Table -->
   <table class="table">
     <thead>
@@ -63,16 +63,25 @@
         <th>Категория</th>
         <th>Цена</th>
         <th>Количество мест</th>
-        <th>Свободные даты</th>
+        <th>Забронированные даты</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
-    {% for room in rooms %}
+    {% for room in room_filter %}
+    <forma>
       <tr>
         <td>{{ room.hr_category }}</td>
         <td>{{ room.hr_price }} <span class="glyphicon glyphicon-euro"></span></td>
         <td>{{ room.hr_places}}</td>
+        <td>
+          {% for rd in room.get_reserved_dates %}
+          <h5>{{ rd }}</h5>
+          {% endfor %}
+        </td>
+        <td><button type="submit" class="btn btn-success">Забронировать</button></td>
       </tr>
+    </forma>
     {% endfor %}
     </tbody>
   </table>
